# libperseus-sdr-win

./: .gitignore  CMakeLists.txt
src/: perseus-in.c  perseus-in.h  perseus-sdr.c  perseus-sdr.h  perseusfx2.c  perseusfx2.h
